--- a/src/app/modules/boost/modal/tabs/boost-modal-tabs.component.ng.scss
+++ b/src/app/modules/boost/modal/tabs/boost-modal-tabs.component.ng.scss
@@ -56,7 +56,7 @@ $collapse-width: 830px;
       }
 
       .m-boostModal__mainPanelInput + * {
-        margin-top: 40px;
+        margin-top: 30px;
         display: block;
       }
     }
